--- a/Source/Tesis/titlepage.tex
+++ b/Source/Tesis/titlepage.tex
@@ -38,7 +38,7 @@
 %%   \insertsubmitdate
 \vspace{-3cm}
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.pdf}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.jpg}
 \end{flushright}
 
 \begin{titlepage}
